bug fix , removed ampq and tracer initiation
