# controllers/app_controller.go
@@ -7,6 +7,7 @@ import (
 	"blue-admin.com/common"
 	"blue-admin.com/models"
 	"blue-admin.com/observe"
+	"blue-admin.com/utils"
 	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
 	"github.com/mitchellh/mapstructure"
@@ -167,6 +168,137 @@ func GetAppRoleUUID(contx *fiber.Ctx) error {
 	})
 }
 
+// GetAppRoleUUID is a function to get a Apps by UUID
+// @Summary Get App Roles by UUID
+// @Description Get app roles by UUID
+// @Tags Apps
+// @Security ApiKeyAuth
+// @Accept json
+// @Produce json
+// @Param page query int true "page"
+// @Param size query int true "page size"
+// @Param app_uuid path string true "App UUID"
+// @Success 200 {object} common.ResponseHTTP{data=[]models.RolePut}
+// @Failure 404 {object} common.ResponseHTTP{}
+// @Router /approleuuid/{app_uuid} [get]
+func GetAppRoleAllUUID(contx *fiber.Ctx) error {
+
+	// Starting tracer context and tracer
+	ctx := contx.Locals("tracer")
+	tracer, _ := ctx.(*observe.RouteTracer)
+
+	//  Getting Database connection
+	db, _ := contx.Locals("db").(*gorm.DB)
+
+	//  parsing Query Prameters
+	Page, _ := strconv.Atoi(contx.Query("page"))
+	Limit, _ := strconv.Atoi(contx.Query("size"))
+	//  checking if query parameters  are correct
+	if Page == 0 || Limit == 0 {
+		return contx.Status(http.StatusBadRequest).JSON(common.ResponseHTTP{
+			Success: false,
+			Message: "Not Allowed, Bad request",
+			Data:    nil,
+		})
+	}
+
+	//  parsing Query Prameters
+	uuid := contx.Params("app_uuid")
+	if uuid == "" {
+		return contx.Status(http.StatusBadRequest).JSON(common.ResponseHTTP{
+			Success: false,
+			Message: "No uuid",
+			Data:    nil,
+		})
+	}
+
+	// Preparing and querying database using Gorm
+	//getting total count first
+	var total_counter int64
+	count_string := `select distinct apps.id as appID from roles
+						inner join apps on roles.app_id == apps.id
+						where apps.uuid = ? ORDER BY roles.id;`
+	if res := db.WithContext(tracer.Tracer).Raw(count_string, uuid, Limit, Page).Count(&total_counter); res.Error != nil {
+		return contx.Status(http.StatusNotFound).JSON(common.ResponseHTTP{
+			Success: false,
+			Message: res.Error.Error(),
+			Data:    nil,
+		})
+	}
+
+	var roles []models.RolePut
+	// select apps.id as appID, roles.id, roles.name, roles.description,roles.active from roles inner join apps on roles.app_id == apps.id where apps.uuid =="0191c74f-d039-71c6-a3be-66e2571a9cf1" ORDER BY roles.id;
+	query_string := `select distinct apps.id as appID, roles.id, roles.name, roles.description,roles.active from roles
+						inner join apps on roles.app_id == apps.id
+						where apps.uuid = ? ORDER BY roles.id LIMIT ? OFFSET ?;`
+
+	if res := db.WithContext(tracer.Tracer).Raw(query_string, uuid, Limit, Page).Scan(&roles); res.Error != nil {
+		return contx.Status(http.StatusNotFound).JSON(common.ResponseHTTP{
+			Success: false,
+			Message: res.Error.Error(),
+			Data:    nil,
+		})
+	}
+
+	//  Finally returing response if All the above compeleted successfully
+	return contx.Status(http.StatusOK).JSON(common.ResponseHTTP{
+		Success: true,
+		Message: "Success got one app.",
+		Total:   uint(total_counter),
+		Page:    uint(Page),
+		Size:    uint(Limit),
+		Data:    &roles,
+	})
+}
+
+// GetAppRoleMatrix is a function to get APP
+// @Summary Get App Roles Matrix by UUID
+// @Description Get app endpoint role matrix by UUID
+// @Tags ClientOnly
+// @Security ApiKeyAuth
+// @Accept json
+// @Produce json
+// @Param app_uuid path string true "App UUID"
+// @Success 200 {object} common.ResponseHTTP{data=map[string]string}
+// @Failure 404 {object} common.ResponseHTTP{}
+// @Router /clientmatrix/{app_uuid} [get]
+func GetClientMatrix(contx *fiber.Ctx) error {
+
+	// Starting tracer context and tracer
+	ctx := contx.Locals("tracer")
+	tracer, _ := ctx.(*observe.RouteTracer)
+
+	//  Getting Database connection
+	db, _ := contx.Locals("db").(*gorm.DB)
+
+	//  parsing Query Prameters
+	uuid := contx.Params("app_uuid")
+	if uuid == "" {
+		return contx.Status(http.StatusBadRequest).JSON(common.ResponseHTTP{
+			Success: false,
+			Message: "No uuid",
+			Data:    nil,
+		})
+	}
+
+	// client matrix result
+	result, err := utils.GetAppFeaturesReturn(uuid, db, tracer.Tracer)
+	if err != nil {
+		return contx.Status(http.StatusInternalServerError).JSON(common.ResponseHTTP{
+			Success: true,
+			Message: err.Error(),
+			Data:    nil,
+		})
+	}
+
+	//  Finally returing response if All the above compeleted successfully
+	return contx.Status(http.StatusOK).JSON(common.ResponseHTTP{
+		Success: true,
+		Message: "Success got matrix.",
+		Data:    &result,
+	})
+}
+
 // Add App to data
 // @Summary Add a new App
 // @Description Add App
@@ -216,6 +348,7 @@ func PostApp(contx *fiber.Ctx) error {
 	app := new(models.App)
 	app.Name = posted_app.Name
 	app.Description = posted_app.Description
+	app.Active = posted_app.Active
 
 	//  start transaction to database
 	tx := db.WithContext(tracer.Tracer).Begin()
@@ -312,7 +445,7 @@ func PatchApp(contx *fiber.Ctx) error {
 	}
 
 	// Update the record
-	if err := db.WithContext(tracer.Tracer).Model(&app).UpdateColumns(*patch_app).Error; err != nil {
+	if err := db.WithContext(tracer.Tracer).Model(&app).UpdateColumns(*patch_app).Update("active", patch_app.Active).Error; err != nil {
 		tx.Rollback()
 		return contx.Status(http.StatusInternalServerError).JSON(common.ResponseHTTP{
 			Success: false,
@@ -550,6 +683,7 @@ func DeleteRoleApps(contx *fiber.Ctx) error {
 type AppsDropDown struct {
 	ID   uint   `validate:"required" json:"id"`
 	Name string `validate:"required" json:"name"`
+	UUID string `gorm:"constraint:not null; unique; type:string;" json:"uuid"`
 }
 
 // Get Feature Dropdown only active roles
